# segment-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: _client.py  main.py  server.py
src/segment/: __init__.py  tools.py
